--- a/app/views/cameras/single/_logs_tab.html.erb
+++ b/app/views/cameras/single/_logs_tab.html.erb
@@ -1,7 +1,7 @@
 <div class="info-panel padding-right15">
   <div id="logs-filter" class="filter">
     <div class="row dates margin-top-10">
-      <div class="col-sm-2 set-margin padding-right-left-10"><h5>Date, Time &amp; Filter</h5></div>
+      <div class="col-sm-1 min-width-114 set-margin padding-right-left-10"><h5>Date &amp; Time:</h5></div>
       <div class="col-sm-1 min-width200">
         <label>From:</label>
         <input id="datetimepicker" class="datetimepicker" type="text" value="">
@@ -10,13 +10,33 @@
         <label>To:</label>
         <input id="datetimepicker2" class="datetimepicker to-time" type="text" value="">
       </div>
-      <div class="col-sm-1 min-width150 dropdown-checklist filter" id="div-dropdown-checklist" style="visibility: visible;">
-        <label>Filter:</label>
-        <div href="#" class="btn btn-default grey filter-dialog" data-toggle="modal" data-target="#flter-logs">
-          <i class="fa fa-columns"></i>
+    </div>
+
+    <div class="row dates margin-top-10">
+      <% first,second = @types.each_slice( (@types.size/2.0).round ).to_a %>
+      <div class="col-sm-1 min-width-114 set-margin padding-right-left-10 min-height-67"><h5>Filter By:</h5></div>
+      <div class="col-sm-7 dropdown-checklist filter" id="div-dropdown-checklist" style="visibility: visible;">
+        <div class="checkbox-list">
+          <div class="input-group checkbox">
+            <input id="type-all" name="type" class="" type="checkbox" value="" /> <label class="type-label" for="type-all">All </label>
+          </div>
+          <% first.each do |t| %>
+            <div class="input-group checkbox">
+              <input id="type-<%= t %>" name="type" class="logs-checkbox" type="checkbox" value="<%= t %>" <% if params[:types] and params[:types].include?(t) %> checked<% end %> > <label class="type-label" for="type-<%= t %>"><%= t.capitalize %></label>
+            </div>
+          <% end %>
         </div>
       </div>
-       <div class="col-sm-2">
+      <div class="col-sm-9 dropdown-checklist filter" id="div-dropdown-checklist" style="visibility: visible;">
+        <div class="checkbox-list">
+          <% second.each do |t| %>
+            <div class="input-group checkbox">
+              <input id="type-<%= t %>" name="type" class="logs-checkbox" type="checkbox" value="<%= t %>" <% if params[:types] and params[:types].include?(t) %> checked<% end %> > <label class="type-label" for="type-<%= t %>"><%= t.capitalize %></label>
+            </div>
+          <% end %>
+        </div>
+      </div>
+      <div class="col-sm-9">
         <input id="current-page" type="hidden" value="<%= @page + 1 %>">
         <input id="exid" type="hidden" value="<%= @camera['id'] %>">
         <input id="base-url" type="hidden" value="<%= "#{EVERCAM_API}cameras/#{params[:id]}/logs?api_id=#{current_user.api_id}&api_key=#{current_user.api_key}&objects=true&limit=10000" %>">
@@ -55,7 +75,7 @@
     </div>
   </div>
 
-  <div class="row margin-top-20">
+  <div class="row">
     <div class="div-elms"><img class="full-image" width="100%"></div>
     <div class="col-sm-12 padding-right-left-10">
       <table id="logs-table" class="table table-logs table-striped table-bordered table cell-border display compact">
