Improve date range and time range input fields.

--- a/app/assets/stylesheets/views/cameras/single/_timelapse.scss
+++ b/app/assets/stylesheets/views/cameras/single/_timelapse.scss
@@ -392,6 +392,22 @@
     margin-top: 9px;
   }
 
+  .range-input-field {
+    min-width: 100px;
+  }
+
+  .width20 {
+    width: 20px;
+  }
+
+  .min-width-140 {
+    min-width: 140px;
+  }
+
+  .padding-right0 {
+    padding-right: 0px;
+  }
+
   .select2-container,
   .select2-container .select2-selection--single {
     height: 40px;
