--- a/app/views/cameras/single/_logs_tab.html.erb
+++ b/app/views/cameras/single/_logs_tab.html.erb
@@ -20,20 +20,33 @@
           <div class="input-group checkbox">
             <input id="type-all" name="type" class="" type="checkbox" value="" /> <label class="type-label" for="type-all">All </label>
           </div>
-          <% first.each do |t| %>
+          <div class="input-group checkbox">
+            <input id="type-online-offline" name="type" class="" type="checkbox" value="online,offline" /> <label class="type-label" for="type-online-offline">Online / Offline</label>
+          </div>
+          <div class="input-group checkbox">
+            <input id="type-accessed" name="type" class="" type="checkbox" value="" /> <label class="type-label" for="type-accessed">Accessed</label>
+          </div>
+          <div class="input-group checkbox">
+            <input id="type-cloud-recording" name="type" class="" type="checkbox" value="cloud recordings updated,cloud recordings created" /> <label class="type-label" for="type-cloud-recording">Cloud Recording Settings</label>
+          </div>
+          <div class="input-group checkbox">
+            <input id="type-sharing" name="type" class="" type="checkbox" value="shared,stopped sharing" /> <label class="type-label" for="type-sharing">Sharing Settings</label>
+          </div>
+<!--           <% first.each do |t| %>
             <div class="input-group checkbox">
               <input id="type-<%= t %>" name="type" class="logs-checkbox" type="checkbox" value="<%= t %>" <% if params[:types] and params[:types].include?(t) %> checked<% end %> > <label class="type-label" for="type-<%= t %>"><%= t.capitalize %></label>
             </div>
-          <% end %>
+          <% end %> -->
         </div>
       </div>
       <div class="col-sm-9 dropdown-checklist filter" id="div-dropdown-checklist" style="visibility: visible;">
         <div class="checkbox-list">
-          <% second.each do |t| %>
-            <div class="input-group checkbox">
-              <input id="type-<%= t %>" name="type" class="logs-checkbox" type="checkbox" value="<%= t %>" <% if params[:types] and params[:types].include?(t) %> checked<% end %> > <label class="type-label" for="type-<%= t %>"><%= t.capitalize %></label>
-            </div>
-          <% end %>
+          <div class="input-group checkbox">
+            <input id="type-archive" name="type" class="" type="checkbox" value="archive created,archive deleted" /> <label class="type-label" for="type-archive">Archive Settings</label>
+          </div>
+          <div class="input-group checkbox">
+            <input id="type-camera-settings" name="type" class="" type="checkbox" value="accessed,viewed,edited,captured" /> <label class="type-label" for="type-camera-settings">Camera Settings</label>
+          </div>
         </div>
       </div>
       <div class="col-sm-9">
