Added compare images tab

--- a/app/assets/stylesheets/views/cameras/single.scss
+++ b/app/assets/stylesheets/views/cameras/single.scss
@@ -9,6 +9,7 @@
 @import "single/_archives.scss";
 @import "single/single-snapmail.scss";
 @import "single/timelapse.scss";
+@import "single/compare.scss";
 
 .center-tabs .icon-bar-alignment {
   font-size: 16px;
