--- a/app/assets/stylesheets/views/cameras/single/_compare.scss
+++ b/app/assets/stylesheets/views/cameras/single/_compare.scss
@@ -1,12 +1,12 @@
 .compare_tab {
-  /* Images compare main container */
+  // Images compare main container
   .images-compare-container {
     display: inline-block;
     position: relative;
     overflow: hidden;
   }
 
-  /* Images compare front element */
+  // Images compare front element
   .images-compare-before {
     will-change: clip;
     position: absolute;
@@ -17,22 +17,22 @@
     overflow: hidden;
   }
 
-  /* Images compare back element */
+  // Images compare back element
   .images-compare-after {
     pointer-events: none;
   }
 
-  /* Responsive image settings */
+  // Responsive image settings
   .images-compare-before img, .images-compare-after img {
     max-width: 100%;
     height: auto;
     display: block;
   }
 
-  /* Separator (thin vertical blank line) */
+  // Separator (thin vertical blank line)
   .images-compare-separator {
     position: absolute;
-    background: white;
+    background: $white;
     height: 100%;
     width: 1px;
     z-index: 4;
@@ -40,7 +40,7 @@
     top: 0;
   }
 
-  /* Drag handle (circle) */
+  // Drag handle (circle)
   .images-compare-handle {
     height: 38px;
     width: 38px;
@@ -49,7 +49,7 @@
     top: 50%;
     margin-left: -22px;
     margin-top: -22px;
-    border: 3px solid white;
+    border: 3px solid $white;
     -webkit-border-radius: 1000px;
     -moz-border-radius: 1000px;
     border-radius: 1000px;
@@ -62,7 +62,7 @@
     cursor: pointer;
   }
 
-  /* Drag handle arrows */
+  // Drag handle arrows
   .images-compare-left-arrow, .images-compare-right-arrow {
     width: 0;
     height: 0;
@@ -73,18 +73,18 @@
   }
 
   .images-compare-left-arrow {
-    border-right: 6px solid white;
+    border-right: 6px solid $white;
     left: 50%;
     margin-left: -17px;
   }
 
   .images-compare-right-arrow {
-    border-left: 6px solid white;
+    border-left: 6px solid $white;
     right: 50%;
     margin-right: -17px;
   }
 
-  /* Label */
+  // Label
   .images-compare-label {
     font-family: sans-serif;
     text-transform: uppercase;
