--- a/app/assets/stylesheets/views/cameras/single/_compare.scss
+++ b/app/assets/stylesheets/views/cameras/single/_compare.scss
@@ -24,8 +24,8 @@
 
   // Responsive image settings
   .images-compare-before img, .images-compare-after img {
-    max-width: 100%;
-    height: auto;
+    width: 100%;
+    height: 100%;
     display: block;
   }
 
@@ -121,22 +121,30 @@
     font-family: sans-serif;
     text-transform: uppercase;
     font-weight: bold;
-    position: absolute;
-    top: 60px;
-    left: 10px;
-    z-index: 1;
     color: rgb(0, 0, 0);
     color: rgba(0, 0, 0, 0.4);
     background: rgb(255, 255, 255);
     background: rgba(255, 255, 255, 0.7);
-    padding: 10px;
+    padding: 6px 10px;
     border-radius: 5px;
     pointer-events: auto;
     cursor: pointer;
   }
 
   .evercam-brand {
+    bottom: 5px;
+    display: table;
+    height: 14px;
+    line-height: 14px;
+    padding: 1px 4px 1px 5px;
     position: absolute;
-    z-index: 1;
+    text-decoration: none;
+    z-index: 10;
+  }
+
+  .evercam-brand img.svg-logo {
+    height: auto;
+    width: 140px;
+    margin-left: 3px;
   }
 }
