--- a/app/views/cameras/single/_compare_tab.html.erb
+++ b/app/views/cameras/single/_compare_tab.html.erb
@@ -2,16 +2,19 @@
   <div class="">
     <input type="hidden" id="txtbefore">
     <input type="hidden" id="txtafter">
+    <textarea id="txtEmbedCode" class="embed-code" style="position: absolute;left: -9999px;top: 0;"></textarea>
     <div class="js-img-compare">
       <div style="display: none;">
         <span id="calendar-before" class="images-compare-label"><i class="fa fa-calendar compare-calendar"></i> Before</span>
-        <span class="images-compare-embed-code"><i class="fa fa-code"></i> Embed Code</span>
-        <textarea id="txtEmbedCode" class="embed-code" style="position: absolute;left: -9999px;top: 0;">asdasdsaff</textarea>
         <img id="compare_before" src="" alt="Before"/>
       </div>
       <div>
         <span id="calendar-after" class="images-compare-label"><i class="fa fa-calendar compare-calendar"></i> After</span>
         <img id="compare_after" src="" alt="After"/>
+      </div>
+      <div class="evercam-brand">
+        <span class="images-compare-embed-code" title="Embed Code"><i class="fa fa-code"></i></span>
+        <%= image_tag("evercam-logo-white.png", :class => "svg-logo", alt: "Evercam.io") %>
       </div>
       <div class="hide">
         <button class="btn js-front-btn">Show front image</button>
